--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello My Name is Dinel Vejzovic
+<img src="Dino.png" alt="Dinel" class="center">
+Hello My Name is Dinel Vejzovic and I work on professionally installing windows for many types of structures.
