--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<img src="Dino.png" alt="Dinel" class="center">
-Hello My Name is Dinel Vejzovic and I work on professionally installing windows for many types of structures.
+<center>Hello My Name is Dinel Vejzovic and I work on professionally installing windows for many types of structures.</center>
+<img src="Dino.jpg" alt="DinoMontaze" width="250" height="250">
