--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <center>Hello My Name is Dinel Vejzovic and I work on professionally installing windows for many types of structures.</center>
-<center></center><img src="Dino.png" alt="DinoMontaze" width="250" height="250"></center>
+<center><img src="Dino.png" alt="DinoMontaze" width="350" height="350"></center>
