--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="tf-topbar">
             <ul class="top-content">
                 <li class="adress">
-                    <a href="#" ><i class="icon-iconmap"></i> 2072 Pinnickinick Street, WA 98370</a >
+                    <a href="#" ><i class="icon-iconmap"></i> Milčinskega ulica 4, Celje, 3000 Celje +38670475059</a >
                 </li>
                 <li class="email">
-                    <a href="#" ><i class="icon-iconmail"></i>info@website.com</a >
+                    <a href="#" ><i class="icon-iconmail"></i>dinomontaze21@gmail.com</a >
                 </li>
             </ul>
                 <div class="topbar-socials">
