--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="logo bg-white">
               
               <a href="index.html">
-                <img src="about/imgaboutus.jpg" alt="images" data-retina="about/imgaboutus.jpg" />
+                <img src="/images/about/imgaboutus.jpg" alt="images" data-retina="/images/about/imgaboutus.jpg" />
               </a>
             </div>
             <!-- logo -->
