--- a/index.html
+++ b/index.html
@@ -1653,13 +1653,6 @@ izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
                         </fieldset>
 
                         <fieldset class="select-wrap" role="group">
-                        <div class="select">
-                        <select name="Location" id="Location">                       
-                            <option value="Please Select">Choose services</option>
-                            <option value="services1">Choose services 01</option>
-                            <option value="services2">Choose services 02</option>
-                        </select>
-                    </div>
                         </fieldset>
                     </div>
                     <fieldset class="message-wrap">
@@ -1688,13 +1681,6 @@ izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
           <div class="partners partners-style1 partners-style1-hv">
             <div class="banners-z">
               <div class="flat-carousel-box data-effect clearfix" data-zero="0" data-gap="70" data-column="5" data-column2="3" data-column3="2" data-dots="false" data-auto="true" data-nav="false" data-loop="true">
-                <div class="owl-carousel owl-loaded owl-drag owl-carousel-style1">
-                    <a href="home2.html"><img src="images/Carosel/imgslder1.png" alt="images" /></a>
-                    <a href="home2.html"> <img src="images/Carosel/imgslder2.png" alt="images" /></a>
-                    <a href="home2.html"> <img src="images/Carosel/imgslder3.png" alt="images" /></a>
-                    <a href="home2.html"> <img src="images/Carosel/imgslder4.png" alt="images" /></a>
-                    <a href="home2.html"> <img src="images/Carosel/imgslder5.png" alt="images" /></a>
-                </div>
               </div>
             </div>
           </div>
@@ -1737,7 +1723,7 @@ izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
                         <div id="botom">
                         <div class="bottom-wrap">
                             <div id="text-bottom">
-                            <a href="#">© Themesflat</a><span class="text2-bottom color-botom">2020 | All Rights Reserved</span>
+                            <a href="#">© DINOMONTAŽE d.o.o</a><span class="text2-bottom color-botom">2023 | All Rights Reserved</span>
                             </div>
                         </div>
                         </div>
