--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@ izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
                         <div id="botom">
                         <div class="bottom-wrap">
                             <div id="text-bottom">
-                            <a href="#">© DINOMONTAŽE d.o.o</a><span class="text2-bottom color-botom">2023 | All Rights Reserved</span>
+                            <a href="#">© DINOMONTAŽE d.o.o</a><span class="text2-bottom color-botom"> 2023</span>
                             </div>
                         </div>
                         </div>
