--- a/index.html
+++ b/index.html
@@ -564,16 +564,10 @@ izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
                     </p>
                     <ul class="icon-box tf-icon-box-style wow jackInTheBox animated" data-wow-delay="0ms" data-wow-duration="1500ms">
                         <li class="">
-                            <span class="color-style2">Malesuada dictum</span>
+                            <span class="color-style2">Vrata</span>
                         </li>
                         <li class="padding-left20">
-                            <span class="color-style2">Tempor commodo</span>
-                        </li>
-                        <li class="">
-                            <span class="color-style2">Dictum neque</span>
-                        </li>
-                        <li class="padding-left20">
-                            <span class="color-style2">Tempor commodo</span>
+                            <span class="color-style2">Prozori</span>
                         </li>
                     </ul>
                 </div>
