--- a/index.html
+++ b/index.html
@@ -493,10 +493,8 @@
                 </div>
                 <div class="col-sm-6 clearfix margin-botom35">
                     <div class="title-section margin-top71 wow fadeInDown">
-                        <div class="sub-title">Više informacija o nama</div>
-                    </div>
-                    <p>
-DOLGOLETNA TRADICIJA IZDELOVANJA VRHUNSKEGA STAVBNEGA POHIŠTVA.
+                        <div class="sub-title">Više informacija o nama
+                        DOLGOLETNA TRADICIJA IZDELOVANJA VRHUNSKEGA STAVBNEGA POHIŠTVA.
 
  
 
@@ -540,8 +538,9 @@ demontažo starega in montažo novega stavbnega pohištva
 menjavo starih oken in vrat
 kratke roke izdelave (20 do 45 dni)
 vzdrževanje stavbnega pohištva
-izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt
-                    </p>
+izdelavo celotnega zunanjega stavbnega pohištva za vaš objekt</div>
+                    </div>
+
                     <ul class="icon-box tf-icon-box-style wow jackInTheBox animated" data-wow-delay="0ms" data-wow-duration="1500ms">
                         <li class="">
                             <span class="color-style2">Vrata</span>
