--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                 </div>
                 <div class="col-sm-6 clearfix margin-botom35">
                     <div class="title-section margin-top71 wow fadeInDown">
-                        <div class="sub-title">Više informacija o nama
+                        <div class="sub-title">
                         DOLGOLETNA TRADICIJA IZDELOVANJA VRHUNSKEGA STAVBNEGA POHIŠTVA.
 
  
