--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2">The Futurist</h1>
+                      <h1 class="title2"></h1>
                     </div>
 
                     <div
@@ -164,7 +164,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2">Windows & Doors</h1>
+                      <h1 class="title2"></h1>
                     </div>
 
                     <div
@@ -207,10 +207,7 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
-                    >
-                      Fonsetetur sadipscing elitr, sed diam nonumy eirmod tempor
-                      <br />
-                      invidunt ut labore et dolore magna aliquyam
+                    >                      <br />
                     </div>
 
                     <div
@@ -233,7 +230,6 @@
                       data-responsive_offset="on">
                       <a href="page-contact.html"
                         class="themesflat-button-style2 btn-style-two">
-                        <span class="btn-title">GET A QUOTE</span></a>
                     </div>
 
                     <div
@@ -276,7 +272,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h5>minimalism.</h5>
+                      <h5></h5>
                     </div>
                   </li>
                   <!-- /End Slide 1 -->
@@ -304,7 +300,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <span class="title1">Fonsetetur sadipscing</span>
+                      <span class="title1"></span>
                     </div>
 
                     <div
@@ -328,7 +324,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2">The Futurist</h1>
+                      <h1 class="title2"></h1>
                     </div>
 
                     <div
@@ -352,7 +348,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2">Windows & Doors</h1>
+                      <h1 class="title2"></h1>
                     </div>
 
                     <div
@@ -396,9 +392,8 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      Fonsetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                      
                       <br />
-                      invidunt ut labore et dolore magna aliquyam
                     </div>
 
                     <div
@@ -421,7 +416,6 @@
                       data-responsive_offset="on">
                       <a href="page-contact.html"
                         class="themesflat-button-style2 btn-style-two">
-                        <span class="btn-title">GET A QUOTE</span></a>
                     </div>
 
                     <div
@@ -464,7 +458,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h5>minimalism.</h5>
+                      <h5></h5>
                     </div>
                   </li>
                   <!-- /End Slide 2 -->
