--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="rev_slider_wrapper fullwidthbanner-container">
               <div id="rev-slider1" class="rev_slider fullwidthabanner">
                 <ul>
-                  <!-- Slide 1 -->
+                 <!-- Slide 1 -->
                   <li data-transition="random">
                     <!-- Main Image -->
                     <div
@@ -140,7 +140,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2"></h1>
+                      <h1 class="title2">The Futurist</h1>
                     </div>
 
                     <div
@@ -164,7 +164,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2"></h1>
+                      <h1 class="title2">Windows & Doors</h1>
                     </div>
 
                     <div
@@ -207,7 +207,10 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
-                    >                      <br />
+                    >
+                      Fonsetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                      <br />
+                      invidunt ut labore et dolore magna aliquyam
                     </div>
 
                     <div
@@ -230,6 +233,7 @@
                       data-responsive_offset="on">
                       <a href="page-contact.html"
                         class="themesflat-button-style2 btn-style-two">
+                        <span class="btn-title">GET A QUOTE</span></a>
                     </div>
 
                     <div
@@ -272,7 +276,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h5></h5>
+                      <h5>minimalism.</h5>
                     </div>
                   </li>
                   <!-- /End Slide 1 -->
@@ -300,7 +304,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <span class="title1"></span>
+                      <span class="title1">Fonsetetur sadipscing</span>
                     </div>
 
                     <div
@@ -324,7 +328,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2"></h1>
+                      <h1 class="title2">The Futurist</h1>
                     </div>
 
                     <div
@@ -348,7 +352,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h1 class="title2"></h1>
+                      <h1 class="title2">Windows & Doors</h1>
                     </div>
 
                     <div
@@ -392,8 +396,9 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      
+                      Fonsetetur sadipscing elitr, sed diam nonumy eirmod tempor
                       <br />
+                      invidunt ut labore et dolore magna aliquyam
                     </div>
 
                     <div
@@ -416,6 +421,7 @@
                       data-responsive_offset="on">
                       <a href="page-contact.html"
                         class="themesflat-button-style2 btn-style-two">
+                        <span class="btn-title">GET A QUOTE</span></a>
                     </div>
 
                     <div
@@ -458,7 +464,7 @@
                       data-splitout="none"
                       data-responsive_offset="on"
                     >
-                      <h5></h5>
+                      <h5>minimalism.</h5>
                     </div>
                   </li>
                   <!-- /End Slide 2 -->
