--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <nav id="mainnav" class="mainnav">
                     <ul class="menu">
-                        <li class="menu-item-has-children current-menu current-menu-item current-menu-ancestor">
+                        <li class="menu-item current-menu current-menu-item current-menu-ancestor">
                             <a href="index.html">Home</a>
                             </ul>
                             </ul>
