--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="rev_slider_wrapper fullwidthbanner-container">
               <div id="rev-slider1" class="rev_slider fullwidthabanner">
                 <ul>
-                 <!-- Slide 1 -->
+                  <!-- Slide 1 -->
                   <li data-transition="random">
                     <!-- Main Image -->
                     <div
@@ -115,6 +115,8 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
+                    >
+                      <span class="title1">Fonsetetur sadipscing</span>
                     </div>
 
                     <div
@@ -137,6 +139,8 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
+                    >
+                      <h1 class="title2">The Futurist</h1>
                     </div>
 
                     <div
@@ -271,6 +275,8 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
+                    >
+                      <h5>minimalism.</h5>
                     </div>
                   </li>
                   <!-- /End Slide 1 -->
@@ -457,6 +463,8 @@
                       data-splitin="none"
                       data-splitout="none"
                       data-responsive_offset="on"
+                    >
+                      <h5>minimalism.</h5>
                     </div>
                   </li>
                   <!-- /End Slide 2 -->
