--- a/index.html
+++ b/index.html
@@ -475,7 +475,227 @@
           <!-- flat-slider -->
 
       <!-- /.page-title -->
-
+        <div class="themesflat-spacer  clearfix" data-desktop="106" data-mobile="60" data-smobile="50" ></div>  
+        <section class="portfolio text-center">
+            <div class="container portfolio-style">
+                <div class="tabs-case-study tabs-garallry">
+                    <div class="flat-tabs tabs-case flat-tabs-type2">
+                        <ul class="menu-tab menu-tab-style">
+                            <li class="active">
+                                <a href="#">All</a>
+                            </li>
+                            <li>
+                                <a href="#">doors</a>
+                            </li>
+                            <li>
+                                <a href="#">windows</a>
+                            </li>
+                            <li>
+                                <a href="#">thaiglass</a>
+                            </li>
+                        </ul>
+                        <div class="content-tab content-tab-gallery">
+                            <div class="content-inner">
+                                <div class="col-tab align-items-center">
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery1.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery4.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery7.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery2.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery5.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery8.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery3.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery6.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery9.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="content-inner">
+                                <div class="col-tab align-items-center">                   
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery1.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery4.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery5.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery3.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery6.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                </div>
+                            </div>
+                            <div class="content-inner">
+                                <div class="col-tab align-items-center">                              
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery1.jpg" alt="images"/>
+                                    </div> 
+                                </div> 
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery7.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery2.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery5.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery8.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery3.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 ">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery9.jpg"
+                                        alt="images"
+                                    />
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                            <div class="content-inner">
+                                <div class="col-tab align-items-center">                              
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery1.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery2.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2 no-margin-right">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery5.jpg"
+                                        alt="images"
+                                    />
+                                    </div> 
+                                </div>
+                                <div class="image-profolio style2">
+                                    <div class="image">
+                                    <img
+                                        src="images/Secsion/imggallery3.jpg" alt="images"/>
+                                    </div> 
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="themesflat-spacer clearfix" data-desktop="90" data-mobile="60" data-smobile="50" ></div>
+        </section>  
+     
       <!-- About Us -->
     <section class="about-us" id="about-us">
         <div class="container">
